k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusops
  labels:
    name: nexusops
    environment: base
